[gd_scene load_steps=11 format=3 uid="uid://c6tflifn824fs"]

[ext_resource type="Script" uid="uid://mnr6ks1d3db6" path="res://misc/gameplay_managers/main.gd" id="1_518bh"]
[ext_resource type="Texture2D" uid="uid://ceeo5gnqb2rcr" path="res://textures/gui/foreground.png" id="3_khi6w"]
[ext_resource type="Texture2D" uid="uid://c86rddiynhvpb" path="res://textures/gui/backgrounds.png" id="3_tsd85"]
[ext_resource type="PackedScene" uid="uid://b85mlpg1agp8h" path="res://misc/selection_cursor/selection_cursor.tscn" id="4_lfpb3"]
[ext_resource type="PackedScene" uid="uid://covhvnd4w4mkl" path="res://misc/gameplay_managers/sound_manager.tscn" id="5_icnsw"]
[ext_resource type="PackedScene" uid="uid://dwv4awarhydj0" path="res://misc/gameplay_managers/combat_manager.tscn" id="5_xm8nu"]
[ext_resource type="PackedScene" uid="uid://cmd2yidmaqw8e" path="res://misc/gameplay_managers/skill_manager.tscn" id="5_y3pxv"]
[ext_resource type="PackedScene" uid="uid://81w41aon23of" path="res://misc/gameplay_managers/quest_manager.tscn" id="6_1f2dt"]
[ext_resource type="PackedScene" uid="uid://t1lqjxny1int" path="res://gui/gui.tscn" id="9_5e0hy"]

[sub_resource type="Resource" id="Resource_ut36o"]
metadata/__load_path__ = "res://textures/arrow.png"

[node name="Main" type="Node2D" groups=["Persist"]]
process_mode = 3
script = ExtResource("1_518bh")

[node name="GlobalTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_mode = 1
autostart = true

[node name="SoundManager" parent="." instance=ExtResource("5_icnsw")]
unique_name_in_owner = true

[node name="CombatManager" parent="." instance=ExtResource("5_xm8nu")]
unique_name_in_owner = true

[node name="QuestManager" parent="." instance=ExtResource("6_1f2dt")]

[node name="SkillManager" parent="." instance=ExtResource("5_y3pxv")]
skill_path = "res://characters/skills/"

[node name="Background" type="Sprite2D" parent="."]
process_mode = 1
z_index = -5
z_as_relative = false
texture_repeat = 2
scale = Vector2(100000, 100000)
texture = ExtResource("3_tsd85")

[node name="Foreground" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
z_index = 100
z_as_relative = false
scale = Vector2(100000, 100000)
texture = ExtResource("3_khi6w")

[node name="HUDLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 99

[node name="GUI" parent="HUDLayer" instance=ExtResource("9_5e0hy")]
unique_name_in_owner = true
visible = false
z_index = 30

[node name="SelectionCursor" parent="." instance=ExtResource("4_lfpb3")]
unique_name_in_owner = true
process_mode = 1
move_arrow_tex = SubResource("Resource_ut36o")

[connection signal="timeout" from="GlobalTimer" to="." method="global_timer_timeout"]
